Fixing layout bugs Moved the components to the main jsx file. Created styles in a single document to make it easier to fix. Added a GRID. Started creating backgrounds

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 
 .app-wrapper-content{
   grid-area: c;
-  background-color: #282c34;
 }
 
 .App {
