--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color: fuchsia;
+  background-color: #F8EEEE;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
